Fix overflowing elements upon zoom

--- a/components/info/styles.css
+++ b/components/info/styles.css
@@ -37,6 +37,7 @@ body {
 
 .info-images {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-bottom: 120px;
